# yacut

./: README.md  pyproject.toml  requirements.txt
migrations/: README
migrations/versions/: 9277b991ba99_added_added_by_field.py
yacut/: __init__.py  api_views.py  config.py  errors_handlers.py  forms.py  models.py  views.py
yacut/templates/: 404.html  500.html  base.html  index.html
